--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+:root{
+    --btn-number-color: lightgoldenrodyellow;
+    --btn-operator-color: lightgreen;
+    --btn-command-color: lightcoral;
+}
 .calculatorContainer{
     display: flex;
     width: 300px;
@@ -31,62 +36,59 @@
 }
 #itemInputOutputItem1{
     width: 100%;
-    height: 40%;
-    border: 1px solid black;
+    height: 40%; 
     font-size: 20px;
 }
 #itemInputOutputItem2{
     width: 100%;
-    height: 60%;
-    border: 1px solid black;
+    height: 60%; 
     font-size: 30px;
 }
 #item1{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item2{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item3{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item4{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item5{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item6{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item7{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item8{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item9{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #item0{
-    background-color: lightgoldenrodyellow;
+    background-color: var(--btn-number-color);
 }
 #itemAdd{
-    background-color: lightgreen;
+    background-color: var(--btn-operator-color);
 }
 #itemSubtract{
-    background-color: lightgreen;
+    background-color: var(--btn-operator-color);
 }
 #itemMultiply{
-    background-color: lightgreen;
+    background-color: var(--btn-operator-color);
 }
 #itemDivide{
-    background-color: lightgreen;
+    background-color: var(--btn-operator-color);
 }
 #itemClear{
-    background-color: lightcoral
+    background-color: var(--btn-command-color);
 }
 #itemEquals{
-    background-color: lightcoral
+    background-color: var(--btn-command-color); 
 }
-
