--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,8 @@
     width: 100%;
     height: 40%; 
     font-size: 20px;
+    overflow: hidden;
+    overflow-x: auto;
 }
 #itemInputOutputItem2{
     width: 100%;
