--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
     width: 100%;
     height: 40%; 
     font-size: 20px;
-    overflow: hidden;
+    /* overflow: hidden; */
     overflow-x: auto;
 }
 #itemInputOutputItem2{
