--- a/styles.css
+++ b/styles.css
@@ -28,21 +28,21 @@
     background: white;
     align-items: center;
 }
-#itemInputOutput{
+#display{
     width: 100%;
     height: 100px;
     text-align: right;
     display: flex;
     flex-direction: column;
 }
-#itemInputOutputItem1{
+#input{
     width: 100%;
     height: 40%; 
     font-size: 20px;
     /* overflow: hidden; */
     overflow-x: auto;
 }
-#itemInputOutputItem2{
+#output{
     width: 100%;
     height: 60%; 
     font-size: 30px;
