Base Version for new layout
DONE:
-Main Event Listener set up(Not completed)
-Number Buttons Completed
TODO:
-Command Buttons
-Operator Buttons
-Main sequence of calculation
-Javascript rounding error
-BODMAS CALCULATION

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@
     width: 100%;
     height: 60%; 
     font-size: 30px;
+    text-align: right;
 }
 /*NUMBERS*/
 .itemNumber{
@@ -67,6 +68,6 @@
 #item0{
     width: 130px;
 }
-.btnDisabled{
+.btnDecimalDisabled{
     background-color: rgba(250, 250, 210, 0.5);
 }
