--- a/styles.css
+++ b/styles.css
@@ -35,14 +35,14 @@
     display: flex;
     flex-direction: column;
 }
-#input{
+#displayInput{
     width: 100%;
     height: 40%; 
     font-size: 20px;
     /* overflow: hidden; */
     overflow-x: auto;
 }
-#output{
+#displayOutput{
     width: 100%;
     height: 60%; 
     font-size: 30px;
