--- a/styles.css
+++ b/styles.css
@@ -29,24 +29,28 @@
     align-items: center;
 }
 #display{
-    width: 100%;
+    width: 280px;
     height: 100px;
     text-align: right;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    
 }
 #displayInput{
-    width: 100%;
+    width: 280px;
     height: 40%; 
     font-size: 20px;
-    /* overflow: hidden; */
+    overflow: hidden;
     overflow-x: auto;
 }
 #displayOutput{
-    width: 100%;
+    width: 280px;
     height: 60%; 
     font-size: 30px;
     text-align: right;
+    overflow: hidden;
+    overflow-x: auto;
 }
 /*NUMBERS*/
 .itemNumber{
