--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,8 @@
     text-align: right;
     overflow: hidden;
     overflow-x: auto;
+    -webkit-appearance: none;
+    margin: 0;
 }
 /*NUMBERS*/
 .itemNumber{
@@ -74,4 +76,11 @@
 }
 .btnDecimalDisabled{
     background-color: rgba(250, 250, 210, 0.5);
+}
+/*Hides input number elements arrows*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
